tests/ui/sync/mutexguard-sync.stderr
error[E0277]: `MutexGuard<'_, Cell<i32>>` cannot be shared between threads safely
  --> $DIR/mutexguard-sync.rs:11:15
   |
LL |     test_sync(guard);
   |     --------- ^^^^^ `MutexGuard<'_, Cell<i32>>` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Sync` is not implemented for `MutexGuard<'_, Cell<i32>>`, which is required by `MutexGuard<'_, Cell<i32>>: Sync`
   = help: the trait `Sync` is implemented for `MutexGuard<'_, T>`
   = note: required for `MutexGuard<'_, Cell<i32>>` to implement `Sync`
note: required by a bound in `test_sync`
  --> $DIR/mutexguard-sync.rs:5:17
   |
LL | fn test_sync<T: Sync>(_t: T) {}
   |                 ^^^^ required by this bound in `test_sync`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
